--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.18.0",
-    "@aws-sdk/util-dynamodb": "^3.18.0"
+    "@aws-sdk/util-dynamodb": "^3.18.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "serverless-iam-roles-per-function": "^3.2.0"
