--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.18.0",
     "@aws-sdk/util-dynamodb": "^3.18.0",
+    "aws-lambda": "^1.0.7",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
-    "serverless-iam-roles-per-function": "^3.2.0"
+    "serverless-iam-roles-per-function": "^3.2.0",
+    "serverless-plugin-typescript": "^2.1.5",
+    "typescript": "^5.3.3",
+	"@types/aws-lambda": "^8.10.80"
   }
 }
